--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,9 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
+.content-with-padding {
+  padding-bottom: 70px; 
+}
 
 .App-header {
   background-color: #282c34;
